--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,15 @@
 <% include partials/header %>
 
-  <h1>Add Customer</h3>
+  <h1>Add Customer</h1>
+
+  <% if(errors != undefined){ %>
+      <ul>
+        <% errors.forEach(function(error){ %>
+        <li><%= error.msg %></li>
+        <% }) %>
+      </ul>
+  <% } %>
+
   <form method="POST" action="/users/add">
     <label>First Name</label><br>
     <input type="text" name="first_name">
@@ -17,13 +26,10 @@
   <h1><%= title %></h1>
 
   <ul>
-
-  <% users.forEach(function(user) { %>
-    <li><%= user.first_name %> 
-    <%= user.last_name %></li>
-
-  <% }) %>
-
+    <% users.forEach(function(user) { %>
+      <li><%= user.first_name %> 
+      <%= user.last_name %></li>
+    <% }) %>
   </ul>
 
 
